--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="--tg-theme-accent-text-color: #168dcd; --tg-color-scheme: light; --tg-theme-bg-color: #ffffff; --tg-theme-button-color: #40a7e3; --tg-theme-button-text-color: #ffffff; --tg-theme-destructive-text-color: #d14e4e; --tg-theme-header-bg-color: #ffffff; --tg-theme-hint-color: #999999; --tg-theme-link-color: #168dcd; --tg-theme-secondary-bg-color: #f1f1f1; --tg-theme-section-bg-color: #ffffff; --tg-theme-section-header-text-color: #168dcd; --tg-theme-section-separator-color: #e7e7e7; --tg-theme-subtitle-text-color: #999999; --tg-theme-text-color: #000000; --tg-viewport-height: 590px; --tg-viewport-stable-height: 590px;">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
